tests/ui/wch_c_nul_mid.rs
use wchar::wch_c;

const NUL_MID: &[u16] = wch_c!("nul byte\0 mid");

fn main() {}
